  problem. This widely reported problem occurs when a server times out
  and closes a connection, after which writes to the connection
  silently fail and we don't learn about the problem until we read
  from the connection.

  Clean up the Jython interpreter correctly so that scripts can use
  exit functions. (See the standard Python atexit module).


Grinder 3.0-beta13
------------------

  Fix bug 847571 - console does not display image icons. Thanks to
  Stefano Santoro for the report.


Grinder 3.0-beta12
------------------

  Updates to the TCPProxy from Bertrand Ave:

   - Added a "-console" switch. When used, the TCPProxy creates a
     simple Swing dialog that allows it to be cleanly interrupted.

   - Added a "-properties" switch to pass System properties to
     filter implementations. Removed the HTTPPluginTCPProxyFilter's
     "-initialTest" option in favour of this more general mechanism.

   - Added a shutdown hook to increase chance of clean shutdown.

  Fix TCPProxy so that it supports HTTP/1.1 from the browser when
  acting as an HTTP Proxy. Recording of cross-site links should now
  work. Thanks to Jimmy Wang for the report.

  Remove the -proxy option from the TCPProxy. The TCPProxy now listens
  as an HTTP proxy by default unless either -remoteHost or -remotePort
  is specified.

  Add a new -httpproxy option to the TCPProxy. This option specifies
  that output should to be directed through another HTTP/HTTPS proxy;
  this may help you reach the Internet. There is also a -httpsproxy
  option which allows you to have a different HTTPS proxy. These
  options are not supported in port forwarding mode.

  The TCPProxy now supports chains of filters. Some may find
  "-httpPlugin -requestFilter ECHO -responseFilter ECHO" useful.

  The TCPProxy now displays key store configuration when starting in
  SSL mode. Support for setting the key store using system properties
  has been removed.

  Optimise TCPProxy SSL initialisation for speed rather than