@@ -32,3 +32,4 @@ grinder.script=helloworld.py
 #grinder.script=jmssender.py
 #grinder.script=jmsreceiver.py
 #grinder.script=console.py
+#grinder.script=scriptlifecycle.py
