@@ -83,12 +83,13 @@ final class JythonScript {
     }
   }
 
+  /**
+   * We don't use m_interpreter.cleanup(), which delegates to
+   * PySystemState.callExitFunc, as callExitFunc logs problems to
+   * stderr. Instead we duplicate the callExitFunc behaviour raise
+   * our own exceptions.
+  */
   public void shutdown() throws EngineException {
-
-    // We don't use m_interpreter.cleanup(), which delegates to
-    // PySystemState.callExitFunc, as callExitFunc logs problems to
-    // stderr. Instead we duplicate the callExitFunc behaviour raise
-    // our own exceptions.
 
     final PyObject exitfunc = m_systemState.__findattr__("exitfunc");
 
@@ -135,8 +136,54 @@ final class JythonScript {
         m_testRunner.__call__();
       }
       catch (PyException e) {
-        throw new JythonScriptExecutionException("invoking script", e);
+        throw new JythonScriptExecutionException("invoking test runner", e);
       }
+    }
+
+    /**
+     * <p>Ensure that if the test runner has a <code>__del__</code>
+     * attribute, it is called when the thread is shutdown. Normally
+     * Jython defers this to the Java garbage collector, so we might
+     * have done something like
+     *
+     * <blockquote><pre>
+     * m_testRunner = null; Runtime.getRuntime().gc();
+     *</pre></blockquote>
+     *
+     * instead. However this would have a number of problems:
+     *
+     * <ol>
+     * <li>Some JVM's may chose not to finalise the test runner in
+     * response to <code>gc()</code>.</li>
+     * <li><code>__del__</code> would be called by a GC thread.</li>
+     * <li>The standard Jython finalizer wrapping around
+     * <code>__del__</code> logs to <code>stderr</code>.</li>
+     * </ol></p>
+     *
+     * <p>Instead, we call any <code>__del__</code> ourselves. After
+     * calling this method, the <code>PyObject</code> that underlies
+     * this class is made invalid.</p>
+    */
+    public void shutdown() throws EngineException {
+
+      final PyObject del = m_testRunner.__class__.__findattr__("__del__");
+
+      if (del != null) {
+        try {
+          del.__call__(m_testRunner);
+        }
+        catch (PyException e) {
+          throw new JythonScriptExecutionException(
+            "deleting test runner object", e);
+        }
+      }
+
+      // To avoid the (pretty small) chance of the test runner being
+      // finalized and __del__ being run twice, we do disable it.
+      // Unfortunately, Jython caches the __del__ attribute and makes
+      // it impossible to turn it off at a class level. Instead we do
+      // this:
+      m_testRunner.__class__ = null;
     }
   }
 }
